Feat: 优化主程序与字模组整体交互

--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "add-husky-scripts": "husky add .husky/pre-commit npm_s_run_s_update:hooks && husky add .husky/pre-commit npm_s_run_s_lint && husky add .husky/pre-commit npm_s_run_s_time",
     "replace-husky-scripts": "xcmd replace-file-content .husky/pre-commit _s_ [space]",
     "electron-icon": "electron-icon-builder --input=./resource/icon.png --output=./resource/electron-icon-builder --flatten",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "npm run build && vite preview --host",
     "before:exe": "tsc -p tsconfig.electron.json",
-    "dev:exe": "chcp 65001 | vite -m electron",
-    "build:exe": "npm run build && npm run before:exe && electron-builder --config=electron-builder-win.json",
-    "preview:exe": "npm run build && npm run before:exe && chcp 65001 | electron . prod",
+    "pull:submodules": "echo '同步拉取 git 子模组-暂未测试使用' && git submodule update --init --recursive && git submodule foreach git pull origin master",
+    "async:modules": "echo '同步模块至 build 目录' && xcmd add-dir ./build/modules && xcmd copy-dir ./modules ./build/modules",
+    "dev": "npm run async:modules && chcp 65001 | vite -m electron",
+    "build": "vite build && npm run async:modules && npm run before:exe && electron-builder --config=electron-builder-win.json",
+    "preview": "vite build && npm run async:modules && npm run before:exe && chcp 65001 | electron . prod",
     "eslint": "eslint ./ --fix --ext .ts,.tsx,.js,.jsx,.vue",
     "prettier": "prettier --write ./**/*.{ts,tsx,js,jsx,vue,html,css,scss,less}",
     "lint": "npm run prettier && npm run eslint",
