--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "electron-icon": "electron-icon-builder --input=./resource/icon.png --output=./resource/electron-icon-builder --flatten",
     "before:exe": "tsc -p tsconfig.electron.json",
     "pull:submodules": "echo '同步拉取 git 子模组-暂未测试使用' && git submodule update --init --recursive && git submodule foreach git pull origin master",
-    "async:modules": "echo '同步模块至 build 目录' && xcmd rm-rf ./build/modules && xcmd add-dir ./build && xcmd add-dir ./build/modules && xcmd copy-dir ./modules ./build/modules",
+    "async:modules": "echo '同步模块至 build 目录' && xcmd rm-rf ./build/modules && xcmd copy-dir ./modules ./build/modules",
     "dev": "npm run async:modules && chcp 65001 | vite -m electron",
     "build": "vite build && npm run async:modules && npm run before:exe && electron-builder --config=electron-builder-win.json",
     "preview": "vite build && npm run async:modules && npm run before:exe && chcp 65001 | electron . prod",
@@ -79,7 +79,7 @@
     "eslint-plugin-spellcheck": "0.0.20",
     "eslint-plugin-zob": "^0.4.0",
     "husky": "^8.0.3",
-    "js-xcmd": "^1.4.6",
+    "js-xcmd": "^1.4.8",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "prettier": "^2.8.8",
